#!/usr/bin/env python3
from dataclasses import dataclass

@dataclass
class GameConfig:
    SCENARIO = 'basic.cfg'
