@startuml
package "src.pacman.actors" as pactors {
  class "Actor" as A
}

package "src.general" as pgeneral { 
  abstract class "AGameCore" as AGC 
  {
  }

  abstract class "APlayer" as P {
    + {abstract} getGame(): GameCore
    + {abstract} make_decision(self, state)
  }
}




package "src.pacman" as ppacman{
  class "GameCore" as GC extends pgeneral.AGC {
    - main_instance : GameCore
    + get_main_instance(): GameCore
    + get_game_state(): GameState
    + next_frame_hooks: List[function(GameState prev, GameState next)]
  }

  class "GameState" as GS {
    + game_over: bool
    + score: int
    + remaining_lives: int
    + collected_points: int
    + remaining_points: int
    + to_training_array(): List[int]
    + to_csv_line(): String
    + get_csv_header(): String
    + get_maze(): Maze
  }

  class "Player" extends pgeneral.P {
    + getGame(): GameCore
    + make_decision(self, state)
  }

  class "GameConfig" as GConf {
    + get_main_instance(): GameConfig
  }

  GC *- GS
  GC <-- Player : "Gra w"
  GC --> GConf : "Pobiera konfigurację z"  
}


package "src.pacman.maze" as pmaze {

  abstract class "MazeObject" as MO {
    + {abstract} to_csv_line(): List[String]
    + {abstract} get_csv_header(): List[String]
    + {abstract} is_walkable(): bool
    - position: Tuple[int, int]
    + get_position(): Tuple[int, int]
    + set_position(pos: Tuple[int, int]): void
    # {abstract} draw()
    + destroy(): void
    + on_player_collision(): void
  }

  class "Point" as P extends MO {
    + is_walkable(): bool
    + draw(): void
    + on_player_collision(): void
  }
  class "Wall" as W extends MO {
    + is_walkable(): bool
    + draw(): void
  }

  class "PowerUp" as PU extends MO {
    + is_walkable(): bool
    + draw(): void
    + on_collision(other: MazeObject): void
    + on_player_collision(): void
  }

  class "Teleport" as T extends MO {
    + is_walkable(): bool
    + draw(): void
    + on_player_collision(): void
  }

  class "Maze" as MA {
    - size: Tuple[int, int]
    - objects_at: Map[Tuple[int, int], List[MazeObject]]
    + get_objects(pos : Tuple[int,int]): List[MazeObject]
    + Maze(file_path: String): void
    + get_size(): Tuple[int, int]  }
    + to_csv_line(): String
    + get_csv_header(): String
      add_object(obj: MazeObject): void
      remove_object(obj: MazeObject): void
    + get_main_instance(): Maze
  }
  MA *-- MO
}

package "src.pacman.actors" as pactors {
  enum GhostState {
    CHASE,
    SCATTER,
    FRIGHTENED,
    NOT_SPAWNED
  }

  abstract class "Actor" as A extends pmaze.MO {
    # name: String
    + spawn_point: Tuple[int, int]
    + {abstract} {static} get_instance()
    + {abstract} get_target(): Tuple[int, int]
    + to_csv_line(): List[String]
    + get_csv_header(): List[String]
    # on_game_update(prev : GameState, current : gameState): void
  }

  class "Pacman" as AP extends A {
    + static {get_instance()} : Pacman
    + get_target(): Tuple[int, int]
  }

  abstract class "Ghost" as AG extends A {
    + {static} notify_instances_powerup_activated(): void
    + {static} notify_instances_powerup_deactivated(): void
    - direction: Direction
    # {abstract} get_color(): str
    # {abstract} get_chase_position(): Tuple[int, int]
    # {abstract} get_scatter_position(): Tuple[int, int]
    - ghosts : List[Ghost]
    + get_target(): Tuple[int, int]
    # on_powerup_activated(): void
    # on_powerup_deactivated(): void
    # draw(): void
    + get_state(): GhostState
    # set_state(state : GhostState): void
    + on_player_collision(): void
    + get_next_direction() : Direction
    
  }
  class "Inky" as AI extends AG {
    # color: str
    # get_chase_position(): Tuple[int, int]
    # get_scatter_position(): Tuple[int, int]
    + {static} get_instance()
  }
  class "Blinky" as AB extends AG {
    # color: str
    # get_chase_position(): Tuple[int, int]
    # get_scatter_position(): Tuple[int, int]
    + {static} get_instance()
  }
  class "Pinky" as APi extends AG {
    # color: str
    # get_chase_position(): Tuple[int, int]
    # get_scatter_position(): Tuple[int, int]
    + {static} get_instance()
  }
  class "Clyde" as AC extends AG {
    # color: ColorValue
    # get_chase_position(): Tuple[int, int]
    # get_scatter_position(): Tuple[int, int]
    + {static} get_instance()
  }

  GhostState - AG

}

ppacman.GS "1" *--- "1" pmaze.MA
pmaze --[hidden]----- pactors 
ppacman.Player --> pactors.AP : "Steruje"
@enduml